--- a/DataScouting/test/crab.cfg
+++ b/DataScouting/test/crab.cfg
@@ -4,10 +4,11 @@ jobtype = cmssw
 scheduler = remoteGlidein
 
 [CMSSW]
-
-datasetpath=/DataScouting/Run2012D-v1/RAW
+lumi_mask=lumimask.json
+datasetpath=/DataScouting/Run2012C-v1/RAW
 #get_edm_output = 1
 pset=runDataScoutingDQM_cfg.py
+allow_NonProductionCMSSW = 1
 
 total_number_of_lumis=-1
 lumis_per_job = 250
